--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -46,6 +46,7 @@
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     align-self: center;
+    margin-top: 15px;
   }
 }
 
@@ -79,6 +80,7 @@
 
     font-size: 92px;
     line-height: 110px;
+    letter-spacing: 4px;
   }
 }
 
@@ -110,7 +112,7 @@
     grid-column: 2 / 3;
     grid-row: 1 / 2;
     margin-top: 52px;
-    margin-bottom: 40px;
+    margin-bottom: 35px;
 
     font-size: 54px;
     line-height: 54px;
@@ -121,7 +123,7 @@
   margin: 0;
   text-align: right;
 
-  @media (max-width: $mobile-width-max) {
+  @media ((max-width: $mobile-width-max) and (max-width: $tablet-width-max)) {
     line-height: 20px;
   }
 }
@@ -148,6 +150,7 @@ padding: 20px;
     grid-row: 3 / 4;
     margin-top: 40px;
     margin-bottom: 52px;
+    padding: 25px;
   }
 }
 
