--- a/source/sass/blocks/juri.scss
+++ b/source/sass/blocks/juri.scss
@@ -34,6 +34,10 @@
     font-size: 54px;
     line-height: 54px;
   }
+
+  @media (min-width: $desktop-width-min) {
+    padding-top: 100px;
+  }
 }
 
 .juri__swiper {
@@ -67,7 +71,7 @@
   text-align: center;
 }
 
-.juri__card--closed > .juri__name {
+.juri__card--closed>.juri__name {
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -76,7 +80,7 @@
   width: 100%;
 }
 
-.juri__card--opened > .juri__name {
+.juri__card--opened>.juri__name {
   position: absolute;
   top: 0;
   left: 50%;
@@ -105,7 +109,7 @@
   margin-top: 76px;
 }
 
-.juri__card--closed > .juri__extra-info-container {
+.juri__card--closed>.juri__extra-info-container {
   display: none;
 }
 
@@ -135,9 +139,11 @@
 .juri__buttons-container {
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     width: 721px;
+    transform: translate(-50%, -50%) translateY(61px);
   }
 
   @media (min-width: $desktop-width-min) {
-    width: 1298px;
+    width: 1321px;
+    transform: translate(-50%, -50%) translateY(94px);
   }
 }
