--- a/source/sass/blocks/offers.scss
+++ b/source/sass/blocks/offers.scss
@@ -64,6 +64,11 @@
       font-size: 24px;
       line-height: 24px;
     }
+
+    @media (min-width: $desktop-width-min) {
+      font-size: 26px;
+      line-height: 26px;
+    }
   }
 
   p {
@@ -110,6 +115,10 @@
       margin-bottom: 12px;
       font-size: 26px;
       line-height: 26px;
+    }
+
+    @media (min-width: $desktop-width-min) {
+      margin-bottom: 10px;
     }
   }
 
