--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -57,7 +57,8 @@
   @media (min-width: $desktop-width-min) {
     width: 321px;
     height: 384px;
-    right: -93px;
+    right: -94px;
+    bottom: 7px;
   }
 }
 
@@ -100,7 +101,6 @@
 
   @media (max-width: $mobile-width-max) {
     margin-bottom: 38px;
-
     font-size: 16px;
     line-height: 16px;
   }
@@ -108,15 +108,13 @@
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     width: 310px;
     margin-bottom: 53px;
-
     font-size: 18px;
     line-height: 18px;
   }
 
   @media (min-width: $desktop-width-min) {
     width: 350px;
-    margin-bottom: 50px;
-
+    margin-bottom: 48px;
     font-size: 20px;
     line-height: 20px;
   }
