--- a/source/sass/blocks/registration.scss
+++ b/source/sass/blocks/registration.scss
@@ -22,6 +22,7 @@
 
   @media (min-width: $desktop-width-min) {
     min-height: 338px;
+    width: 683px;
   }
 }
 
@@ -45,7 +46,6 @@
   margin: 0;
   font-family: $secondary-font-semibold;
 
-
   @media (max-width: $mobile-width-max) {
     margin-bottom: 36px;
     font-size: 32px;
@@ -57,6 +57,10 @@
     font-size: 54px;
     line-height: 54px;
     text-align: center;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    text-align: start;
   }
 }
 
@@ -100,24 +104,22 @@
   width: 100%;
 
   @media (min-width: $tablet-width-min) {
-  padding: 25px;
+    padding: 25px;
   }
 }
 
 // Контакты
 .registration__contacts {
   @media (max-width: $mobile-width-max) {
-    margin: 37px auto;
     width: $mobile-content-width;
   }
 
-  @media (min-width: $tablet-width-min) {
-    margin: 60px auto;
+  @media ((min-width: $tablet-width-min)  and (max-width: $tablet-width-max)) {
     width: 440px;
   }
 
   @media (min-width: $desktop-width-min) {
-    width: 477px;
+    width: 683px;
     min-height: 218px;
   }
 }
