fix: make changes after testing the project, change click for all the item (not only button) when opening the answer (FAQ block)

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,6 +1,6 @@
 .hero {
   color: $basic-light;
-  background-image: linear-gradient(to right, $gradient-dark, $gradient-light);
+  background-image: linear-gradient(to right, #1C3477, #1A3578, #73184B, #B4022A);
 }
 
 .hero__main-container {
