--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -21,7 +21,8 @@
 }
 
 .header__phone-link {
-  font-family: $main-font-bold;
+  font-family: $main-font;
+  font-weight: 700;
   color: $basic-light;
   text-decoration: none;
 
