--- a/source/sass/common/fonts.scss
+++ b/source/sass/common/fonts.scss
@@ -1,6 +1,6 @@
 /* здесь подключите шрифты */
 @font-face {
-  font-family: "Alumni Sans ExtraBold";
+  font-family: "Alumni Sans";
   font-weight: 800;
   font-style: normal;
   font-display: swap;
@@ -10,7 +10,7 @@
 }
 
 @font-face {
-  font-family: "Alumni Sans SemiBold";
+  font-family: "Alumni Sans";
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -20,7 +20,7 @@
 }
 
 @font-face {
-  font-family: "Roboto Condensed Regular";
+  font-family: "Roboto Condensed";
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -30,7 +30,7 @@
 }
 
 @font-face {
-  font-family: "Roboto Condensed Bold";
+  font-family: "Roboto Condensed";
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -40,7 +40,7 @@
 }
 
 @font-face {
-  font-family: "Roboto Condensed Light";
+  font-family: "Roboto Condensed";
   font-weight: 300;
   font-style: normal;
   font-display: swap;
