--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -66,7 +66,8 @@
   grid-column: 1 / 2;
   grid-row: 1 / 3;
 
-  font-family: $secondary-font-semibold;
+  font-family: $secondary-font;
+  font-weight: 600;
   font-size: 48px;
   line-height: 54px;
   text-transform: uppercase;
@@ -84,7 +85,8 @@
 
 .games__description {
   margin: 0;
-  font-family: $main-font-light;
+  font-family: $main-font;
+  font-weight: 300;
 
   @media (max-width: $mobile-width-max) {
     margin-bottom: 16px;
@@ -139,9 +141,10 @@
 
 .games__details-title {
   margin: 0;
-  margin-bottom: 5px; // ????
+  margin-bottom: 5px;
   display: block;
-  font-family: $main-font-light;
+  font-family: $main-font;
+  font-weight: 300;
 
   @media (max-width: $mobile-width-max) {
     font-size: 16px;
@@ -198,7 +201,8 @@
 }
 
 .games__date-day {
-  font-family: $main-font-bold;
+  font-family: $main-font;
+  font-weight: 700;
   font-size: 24px;
   line-height: 24px;
 
@@ -227,7 +231,8 @@
 }
 
 .games__time {
-  font-family: $main-font-bold;
+  font-family: $main-font;
+  font-weight: 700;
   font-size: 24px;
   line-height: 24px;
 
