--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -52,7 +52,8 @@
 
 .hero__title {
   margin: 0;
-  font-family: $secondary-font-extrabold;
+  font-family: $secondary-font;
+  font-weight: 800;
   text-transform: uppercase;
   text-align: right;
 
@@ -86,7 +87,8 @@
 
 .hero__location {
   margin: 0;
-  font-family: "Alumni Sans SemiBold", "Arial", sans-serif;
+  font-family: $secondary-font;
+  font-weight: 600;
   text-align: right;
 
   @media (max-width: $mobile-width-max) {
