--- a/source/sass/blocks/offers.scss
+++ b/source/sass/blocks/offers.scss
@@ -25,7 +25,8 @@
 
 .offers__title {
   margin: 0;
-  font-family: $secondary-font-semibold;
+  font-family: $secondary-font;
+  font-weight: 600;
   text-align: center;
 
   @media (max-width: $mobile-width-max) {
@@ -54,7 +55,8 @@
 
   h3 {
     margin: 0;
-    font-family: $main-font-bold;
+    font-family: $main-font;
+    font-weight: 700;
 
     @media (max-width: $mobile-width-max) {
       font-size: 22px;
@@ -73,7 +75,8 @@
 
   p {
     margin: 0;
-    font-family: $main-font-light;
+    font-family: $main-font;
+    font-weight: 300;
 
     @media (min-width: $tablet-width-min) {
       font-size: 16px;
