--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -18,7 +18,8 @@
 }
 
 .reviews__title {
-  font-family: $secondary-font-semibold;
+  font-family: $secondary-font;
+  font-weight: 600;
   text-align: center;
 
   @media (max-width: $mobile-width-max) {
@@ -116,21 +117,23 @@
 
   blockquote {
     margin: 0;
-    font-family: $main-font-light;
+    font-family: $main-font;
+    font-weight: 300;
+    overflow: scroll;
 
     @media (max-width: $mobile-width-max) {
-      min-height: 154px;
+      height: 154px;
     }
 
     @media (min-width: $tablet-width-min) {
-      min-height: 120px;
+      height: 120px;
       margin-left: 120px;
       font-size: 16px;
       line-height: 24px;
     }
 
     @media (min-width: $desktop-width-min) {
-      min-height: 96px;
+      height: 96px;
       margin-left: 110px;
     }
   }
