fix: add font-weight to h3

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -89,6 +89,7 @@
   margin-bottom: 12px;
   font-size: 20px;
   line-height: 20px;
+  font-weight: 400;
 
   @media (min-width: $tablet-width-min) {
     margin-bottom: 5px;
