--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -11,18 +11,22 @@
   }
 
   @media (min-width: $desktop-width-min) {
-    display: flex;
-    gap: 145px;
-    position: relative; // для видео
-    width: $desktop-content-width;
-    margin: 120px auto 207px;
+    padding: 120px 103px 207px;
     text-align: left;
   }
 }
 
 .about__main-container {
-  margin: 0 auto;
+  @media (min-width: $desktop-width-min) {
+    position: relative; // для видео
+    display: flex;
+    gap: 145px;
+    margin: 0 auto;
+    width: $desktop-content-width;
+  }
+}
 
+.about__text-container {
   @media (max-width: $mobile-width-max) {
     width: $mobile-content-width;
   }
@@ -43,21 +47,18 @@
 
   @media (max-width: $mobile-width-max) {
     margin-bottom: 12px;
-
     font-size: 32px;
     line-height: 32px;
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     margin-bottom: 20px;
-
     font-size: 42px;
     line-height: 42px;
   }
 
   @media (min-width: $desktop-width-min) {
     margin-bottom: 25px;
-
     font-size: 54px;
     line-height: 54px;
   }
@@ -79,7 +80,7 @@
   }
 
   @media (min-width: $desktop-width-min) {
-    margin-bottom: 93px;
+    margin-bottom: 94px;
     font-size: 22px;
     line-height: 22px;
   }
