--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -5,7 +5,7 @@
     padding: 25px 0;
   }
 
-  @media (min-width: $tablet-width-min) {
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,13 +14,24 @@
   }
 
   @media (min-width: $desktop-width-min) {
-    margin: 100px auto;
+    margin: 0;
+    padding: 100px 103px;
   }
 }
 
 .games__main-container {
+  @media (min-width: $desktop-width-min) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: $desktop-content-width;
+    margin: 0 auto;
+  }
+}
+
+.games__text-container {
   background-color: $secondary-red;
-  margin: 0 auto;
+  // margin: 0 auto;
 
   @media (max-width: $mobile-width-max) {
     width: $mobile-content-width;
@@ -33,7 +44,6 @@
   }
 
   @media (min-width: $desktop-width-min) {
-    width: $desktop-content-width;
     min-height: 500px;
     padding: 60px 80px;
   }
