--- a/source/sass/blocks/juri.scss
+++ b/source/sass/blocks/juri.scss
@@ -11,10 +11,14 @@
   }
 
   @media (min-width: $desktop-width-min) {
-    position: relative;
-    margin: 100px auto;
-    width: $desktop-content-width;
+padding: 100px 103px;
   }
+}
+
+.juri__main-container {
+  position: relative;
+  margin: 0 auto;
+  width: $desktop-content-width;
 }
 
 .juri__title {
@@ -29,7 +33,7 @@
     line-height: 32px;
   }
 
-  @media (min-width: $tablet-width-min) {
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     padding-top: 30px;
     margin-bottom: 46px;
     font-size: 54px;
@@ -37,7 +41,9 @@
   }
 
   @media (min-width: $desktop-width-min) {
-    padding-top: 100px;
+    margin-bottom: 46px;
+    font-size: 54px;
+    line-height: 54px;
   }
 }
 
@@ -148,6 +154,6 @@
 
   @media (min-width: $desktop-width-min) {
     width: 1321px;
-    transform: translate(-50%, -50%) translateY(94px);
+    transform: translate(-50%, -50%) translateY(43px);
   }
 }
