--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -64,7 +64,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 30px;
-    row-gap: 40px;
+    row-gap: 41px;
   }
 
   @media (min-width: $desktop-width-min) {
@@ -129,17 +129,18 @@
 
   h3 {
     margin: 0;
-    margin-bottom: 12px;
     font-weight: 400;
 
     @media (max-width: $mobile-width-max) {
       font-size: 18px;
       line-height: 20px;
+      margin-bottom: 12px;
     }
 
     @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
       font-size: 20px;
       line-height: 20px;
+      margin-bottom: 11px;
     }
 
     @media (min-width: $desktop-width-min) {
@@ -170,12 +171,14 @@
 
 .features__item:nth-child(1)::after,
 .features__item:nth-child(2)::after {
-  content: "";
-  position: absolute;
-  bottom: -42px;
-  width: 360px;
-  height: 2px;
-  background-color: rgba(209, 10, 66, 0.2);
+  @media (min-width: $desktop-width-min) {
+    content: "";
+    position: absolute;
+    bottom: -42px;
+    width: 360px;
+    height: 2px;
+    background-color: rgba(209, 10, 66, 0.2);
+  }
 }
 
 .features__item:last-child {
@@ -198,7 +201,7 @@
     grid-row: 2 / 3;
     align-self: center;
     margin: 0 auto;
-    padding: 36px 35px 35px;
+    padding: 35px;
     width: 320px;
     text-align: center;
   }
@@ -222,7 +225,7 @@
     }
 
     @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-      width: 230px;
+      width: 249px;
     }
   }
 
