--- a/source/sass/blocks/offers.scss
+++ b/source/sass/blocks/offers.scss
@@ -5,19 +5,23 @@
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    padding: 61px 45px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    padding: 100px 103px;
+  }
+}
+
+.offers__main-container {
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     width: $tablet-content-width;
-    margin: 62px auto;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
   }
 
-  @media (min-width: $desktop-width-min) {
-   padding: 100px 103px;
-  }
-}
-
-.offers__main-container {
   @media (min-width: $desktop-width-min) {
     width: $desktop-content-width;
     margin: 0 auto;
@@ -43,7 +47,7 @@
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     width: 100%;
-    margin-bottom: 5px;
+    margin-bottom: 4px;
     font-size: 42px;
     line-height: 42px;
   }
@@ -106,7 +110,7 @@
     min-height: 188px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    align-items: flex-start;
   }
 
   @media (min-width: $desktop-width-min) {
@@ -121,7 +125,7 @@
     }
 
     @media (min-width: $tablet-width-min) {
-      margin-bottom: 12px;
+      margin-bottom: 10px;
       font-size: 26px;
       line-height: 26px;
     }
@@ -137,7 +141,7 @@
     }
 
     @media (min-width: $tablet-width-min) {
-      margin-bottom: 40px;
+      margin-bottom: auto;
     }
   }
 }
