--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -190,6 +190,12 @@
     }
   }
 
+  br {
+    @media (min-width: $tablet-width-min) {
+      display: none;
+    }
+  }
+
   p {
     display: none;
   }
