--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,7 +1,6 @@
 .reviews {
   @media (max-width: $mobile-width-max) {
-    margin: 40px auto;
-    width: $mobile-content-width;
+    padding: 40px 15px;
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
@@ -14,6 +13,11 @@
 }
 
 .reviews__main-container {
+  @media (max-width: $mobile-width-max) {
+    margin: 0 auto;
+    width: $mobile-content-width;
+  }
+
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     position: relative;
     margin: 0 auto;
